Remove bg from vertsplit
Looks cleaner... for me :)

--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= [WIP] LessThan vim colorscheme
+= LessThan vim colorscheme
 :author: Maxim Kim
 :experimental:
 :icons: font
@@ -7,9 +7,6 @@
 :rouge-style: github
 :source-linenums-option:
 :imagesdir: images
-
-**WIP**
-
 
 == Screenshots
 
